# Automatic-Soldering-Station-based-on-ESP32

./: .gitignore  sdkconfig.backup
assets/3d_models/pcb_holder/: Slider.stl  SlidingRoads.stl  SlidingRoadsCap.stl  base.stl
assets/automatic_soldering_station_pcb/: automatic_soldering_station_pcb.kicad_pcb  automatic_soldering_station_pcb.kicad_prl  automatic_soldering_station_pcb.kicad_pro  automatic_soldering_station_pcb.kicad_sch  ~automatic_soldering_station_pcb.kicad_pcb.lck
assets/automatic_soldering_station_pcb/output/: automatic_soldering_station_pcb-B_Cu.gbl  automatic_soldering_station_pcb-B_Mask.gbs  automatic_soldering_station_pcb-B_Paste.gbp  automatic_soldering_station_pcb-B_Silkscreen.gbo  automatic_soldering_station_pcb-Edge_Cuts.gm1  automatic_soldering_station_pcb-F_Cu.gtl  automatic_soldering_station_pcb-F_Mask.gts  automatic_soldering_station_pcb-F_Paste.gtp  automatic_soldering_station_pcb-F_Silkscreen.gto  automatic_soldering_station_pcb-NPTH.drl  automatic_soldering_station_pcb-PTH.drl  automatic_soldering_station_pcb.drl
components/dns_server/: CMakeLists.txt  dns_server.c
components/dns_server/include/: dns_server.h
components/execution_fsm/: execution_fsm.cpp
components/execution_fsm/include/: execution_fsm.h
components/fsm_callbacks/: CMakeLists.txt  fsm_callbacks.cpp
components/fsm_callbacks/include/: fsm_callbacks.h
components/fsm_controller/: fsm_controller.cpp
components/fsm_controller/include/: fsm_controller.h
components/gcode_parser/: CMakeLists.txt  gcode_parser.c
components/gcode_parser/include/: gcode_parser.h
components/soldering_iron/: CMakeLists.txt  SolderingIron.cpp  soldering_iron_hal.c
components/soldering_iron/include/: SolderingIron.hpp  soldering_iron_hal.h
components/stepper_motor/: CMakeLists.txt  StepperMotor.cpp  stepper_motor_hal.c
components/stepper_motor/include/: StepperMotor.hpp  stepper_motor_hal.h
components/system_config/: CMakeLists.txt  system_config.cpp
components/system_config/include/: system_config.h
components/temperature_sensor/: CMakeLists.txt  TemperatureSensor.cpp  temperature_sensor_hal.c
components/temperature_sensor/include/: temperature_sensor_hal.h
components/web_server/: CMakeLists.txt  web_server.cpp
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
web_interface/: app.js  board_canvas.js  board_visualization.js  exec.html  exec.js  index.html  machine_canvas.js  manual.html  manual.js  style.css
